force-app/main/default/objects/Claim/fields/Address_Description__c.field-meta.xml
<CustomField>
    <fullName>Address_Description__c</fullName>
    <label>Address Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>