force-app/main/default/objects/Claim/fields/Address_LU__c.field-meta.xml
<CustomField>
    <fullName>Address_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location.RecordType.Name</field>
            <operation>equals</operation>
            <value>Address</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>