force-app/main/default/objects/Claim/fields/Branch_Policy__c.field-meta.xml
<CustomField>
    <fullName>Branch_Policy__c</fullName>
    <label>Branch Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>