force-app/main/default/objects/Claim/fields/Casco__c.field-meta.xml
<CustomField>
    <fullName>Casco__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Casco</label>
    <type>Checkbox</type>
</CustomField>