force-app/main/default/objects/Claim/fields/Detail_Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Survey_Type__c</fullName>
    <label>Detail Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First and Final</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>