force-app/main/default/objects/Claim/fields/Email_Pelapor__c.field-meta.xml
<CustomField>
    <fullName>Email_Pelapor__c</fullName>
    <label>Email Pelapor</label>
    <type>Email</type>
</CustomField>