force-app/main/default/objects/Claim/fields/Facultative_Sharing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Facultative_Sharing_Rate__c</fullName>
    <label>Facultative Sharing Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>