force-app/main/default/objects/Claim/fields/Is_Exgratia__c.field-meta.xml
<CustomField>
    <fullName>Is_Exgratia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Exgratia</label>
    <type>Checkbox</type>
</CustomField>