force-app/main/default/objects/Claim/fields/LKS_Header_Number__c.field-meta.xml
<CustomField>
    <fullName>LKS_Header_Number__c</fullName>
    <label>LKS Header Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>