force-app/main/default/objects/Claim/fields/LKS_Liable__c.field-meta.xml
<CustomField>
    <fullName>LKS_Liable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LKS Liable</label>
    <type>Checkbox</type>
</CustomField>