force-app/main/default/objects/Claim/fields/Loss_Location__c.field-meta.xml
<CustomField>
    <fullName>Loss_Location__c</fullName>
    <label>Loss Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>