force-app/main/default/objects/Claim/fields/M_L_B__c.field-meta.xml
<CustomField>
    <fullName>M_L_B__c</fullName>
    <label>M.L.B</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Parent_COB</valueSetName>
    </valueSet>
</CustomField>