force-app/main/default/objects/Claim/fields/Nomor_Rangka__c.field-meta.xml
<CustomField>
    <fullName>Nomor_Rangka__c</fullName>
    <label>Nomor Rangka</label>
    <length>255</length>
    <type>Text</type>
</CustomField>