force-app/main/default/objects/Claim/fields/PA_Driver__c.field-meta.xml
<CustomField>
    <fullName>PA_Driver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Driver</label>
    <type>Checkbox</type>
</CustomField>