force-app/main/default/objects/Claim/fields/PA_Passanger__c.field-meta.xml
<CustomField>
    <fullName>PA_Passanger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PA Passanger</label>
    <type>Checkbox</type>
</CustomField>