force-app/main/default/objects/Claim/fields/Received_By__c.field-meta.xml
<CustomField>
    <fullName>Received_By__c</fullName>
    <label>Received By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>