force-app/main/default/objects/Claim/fields/Register_No__c.field-meta.xml
<CustomField>
    <fullName>Register_No__c</fullName>
    <label>Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>