force-app/main/default/objects/Claim/fields/Reported_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reported_Phone__c</fullName>
    <label>Reported Phone</label>
    <type>Phone</type>
</CustomField>