force-app/main/default/objects/Claim/fields/Survey_Address__c.field-meta.xml
<CustomField>
    <fullName>Survey_Address__c</fullName>
    <label>Survey Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>