force-app/main/default/objects/Claim/fields/Surveyor_Email__c.field-meta.xml
<CustomField>
    <fullName>Surveyor_Email__c</fullName>
    <label>Surveyor Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>