force-app/main/default/objects/Claim/fields/TPL__c.field-meta.xml
<CustomField>
    <fullName>TPL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPL</label>
    <type>Checkbox</type>
</CustomField>