force-app/main/default/objects/Claim/fields/TPL_Flag__c.field-meta.xml
<CustomField>
    <fullName>TPL_Flag__c</fullName>
    <label>TPL Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Bodily / Injury</fullName>
            </value>
            <value>
                <fullName>Property &amp; Bodily / Injury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>