force-app/main/default/objects/Claim/recordTypes/MV.recordType-meta.xml
<RecordType>
    <fullName>MV</fullName>
    <active>true</active>
    <label>MV</label>
    <!---->
</RecordType>