force-app/main/default/objects/Claim/recordTypes/Non_MV.recordType-meta.xml
<RecordType>
    <fullName>Non_MV</fullName>
    <active>true</active>
    <label>Non MV</label>
    <!---->
</RecordType>