force-app/main/default/objects/Claim/listViews/Claim_C_Reinsurance_Recovery_Claim.listView-meta.xml
<ListView>
    <fullName>Claim_C_Reinsurance_Recovery_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Claim C Reinsurance Recovery</label>
    <queue>Claim_C_Reinsurance_Recovery</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>