force-app/main/default/objects/Claim/listViews/Claim_Engineering_Energy_Mining_Claim.listView-meta.xml
<ListView>
    <fullName>Claim_Engineering_Energy_Mining_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Claim Engineering, Energy &amp; Mining</label>
    <queue>Claim_Engineering_Energy_Mining</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>