force-app/main/default/objects/Claim/listViews/Claim_Heavy_Equi_Misc_Liab_Money_Ins_Claim.listView-meta.xml
<ListView>
    <fullName>Claim_Heavy_Equi_Misc_Liab_Money_Ins_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Claim Heavy Equi, Misc., Liab, Money Ins</label>
    <queue>Claim_Heavy_Equi_Misc_Liab_Money_Ins</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>