force-app/main/default/objects/Claim/listViews/Int_Adjuster_Agency_Office_Claim.listView-meta.xml
<ListView>
    <fullName>Int_Adjuster_Agency_Office_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Int Adjuster Agency Office</label>
    <queue>Int_Adjuster_Agency_Office</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>