force-app/main/default/objects/Claim/listViews/Int_Adjuster_Bandar_Lampung_Claim.listView-meta.xml
<ListView>
    <fullName>Int_Adjuster_Bandar_Lampung_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Int Adjuster Bandar Lampung</label>
    <queue>Int_Adjuster_Bandar_Lampung</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>