force-app/main/default/objects/Claim/listViews/Int_Adjuster_Jambi_Claim.listView-meta.xml
<ListView>
    <fullName>Int_Adjuster_Jambi_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Int Adjuster Jambi</label>
    <queue>Int_Adjuster_Jambi</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>